--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,16 +3,37 @@
 <!-- Space delimited list of page types -->
 {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
 
+<!--Render full content for 5 most recent posts-->
 <div class="posts">
-  {{ range .Paginator.Pages }}
+  {{ range first 5 (where .Site.RegularPages "Type" "in" "post") }}
     <div class="post">
-        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-        <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</span>
-        {{ .Content }}
+      <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+      <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</span>
+      {{ .Content }}
     </div>
   {{ end }}
-</div>
 
+<!--Render summaries for next 15 posts-->
+  <h1>Recent Posts</h1>
+
+  {{ range first 15 (after 5 (where .Site.RegularPages "Type" "in" "post")) }}
+    <div class="post">
+      <h2 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</span>
+      {{ .Summary }}<em><a href="{{ .Permalink }}">Read more...</a></em>
+    </div>
+  {{ end }}
+
+<!--Render list of next 30 posts-->
+  <h1>Older Posts</h1>
+
+  <div class="post">
+    <ul id="list">
+    {{ range first 30 (after 20 (where .Site.RegularPages "Type" "in" "post")) }}
+      {{ .Render "li2"}}
+    {{ end }}
+    </ul>
+  </div>
 <div class="pagination">
   {{ if $paginator.HasNext }}
   <a class="pagination-item older" href="{{ $paginator.Next.URL }}">Older</a>
